# cassette

./: .gitignore  Cargo.toml  Makefile  build.sbt
cassette-backend/: Cargo.toml  README.md
cassette-backend/src/: animation_pipeline.rs  api.rs  dsp.rs  lib.rs  main.rs  mel_filter.rs  output.rs
cassette-backend/src/animation_pipeline/: components.rs  effect.rs  effects.rs  frame.rs  mixer.rs  output.rs  patcher.rs  pixel.rs
cassette-backend/src/animation_pipeline/effect/: FFT.rs  audio_energy.rs  audio_scroll.rs  expanding_squares.rs  image_display.rs  rainbow_wheel.rs
cassette-backend/src/animation_pipeline/effects/: expanding_squares.rs  rainbow_wheel.rs
cassette-backend/src/animation_pipeline/mixer/: border.rs  intensity.rs  linear.rs  overlay.rs  progressive.rs  shape.rs
cassette-backend/src/animation_pipeline/systems/: mixer.rs
cassette-backend/src/api/: create_output.rs  option.rs
cassette-frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
cassette-frontend/src/: index.html  site.webmanifest
cassette-frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  effect-option.ts  effect.ts  mixer.ts  mock-effects.ts  mock-mixers.ts  mock-outputs.ts  output.ts  pixel.ts
cassette-frontend/src/app/matrix-editor/: matrix-editor-routing.module.ts  matrix-editor.component.css  matrix-editor.component.html  matrix-editor.component.spec.ts  matrix-editor.component.ts  matrix-editor.module.ts
cassette-frontend/src/app/matrix-editor/effect-editor/: color-picker-dialog.css  color-picker-dialog.html  effect-editor.component.css  effect-editor.component.html  effect-editor.component.spec.ts  effect-editor.component.ts
cassette-frontend/src/app/outputs-overview/: outputs-overview-routing.module.ts  outputs-overview.component.css  outputs-overview.component.html  outputs-overview.component.spec.ts  outputs-overview.component.ts  outputs-overview.module.ts
cassette-frontend/src/app/services/: backend.service.ts  matrix-live-view.service.ts
cassette-frontend/src/app/shared/audio-view/: audio-view.component.css  audio-view.component.html  audio-view.component.spec.ts  audio-view.component.ts
cassette-frontend/src/app/shared/live-view-canvas/: live-view.component.css  live-view.component.html  live-view.component.ts
cassette-frontend/src/app/shared/live-view-grid/: live-view.component.css  (+2 more)
cassette-frontend/src/app/strip-editor/: strip-editor-routing.module.ts  strip-editor.module.ts
src/: main.rs
tools/: config.py  dsp.py  melbank.py  websocket_data_pusher.py  websocket_fft_pusher.py
(+3 files in other folders)
