[package]
name = "cassette-backend"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
axum = { version = "0.5.3", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.0", features = ["add-extension", "auth", "compression-full", "trace"] }
headers = "0.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde-big-array = "0.4.1"