[package]
name = "cassette-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.5.3", features = ["ws", "headers"] }
axum-macros = { version = "0.2.0" }
headers = "0.3"
hecs = { version = "0.7.6", features = ["macros", "serde"] }
ndarray = "0.15.4"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde-big-array = "0.4.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.0", features = ["add-extension", "auth", "compression-full", "trace"] }
rand = "0.8.4"
cpal = "0.13.5"
rustfft = "6.0.1"
realfft = "3.0.0"
enum_dispatch = "0.3.8"
enum-iterator = "0.8.1"
parking_lot = "0.12.0"
